A series of changes to fix layout issues with IE. The biggest problem was a "jumping" effect where the main portlet window was badly placed and then jumped to the correct spot.  Very cool.  The forum.css change resolves this, but there were other issues with the navbar that created IE layout issues as well, so they are all bundled here.

--- a/ssf/web/docroot/css/forum.css
+++ b/ssf/web/docroot/css/forum.css
@@ -1,12 +1,28 @@
 /* ------------------------------------------------------------------------ */
 /* general styles, used most everywhere */
 
+/*
+ * But first... some hacks for Liferay...
+ *
+ * These two changes are inter-related.  The first fixes a
+ * layout problem with IE when the box model is changed.
+ * The second fixes a layout problem in IE caused by the first
+ * fix.  (Apparently the height: auto makes IE more sensitive
+ * to positioning).
+ */
+ 
+.xportlet-minimum-height {
+	height: auto;
+}
+
+div.xportlet-box {
+    position: relative;
+}
+
+
 /* ss_style is specified in view_css so its colors can be set up
 .ss_style {}
 */
-.portlet-minimum-height {
-		height: auto;
-}
 
 
 /* This style triggers the Nifty Corners rounding effect. 
